MongoCmds.txt
db
sudoarun
use sudoarun
already on db sudoarun
use db
switched to db db
use sudoarun
switched to db sudoarun
show dbs
admin    30.00 KiB
config  90.00 KiB
local    56.00 KiB
use db
switched to db db
db> db.db.insert({"name":"arun","age": 21,"mail":"arunrajorya@gmail.com"})
DeprecationWarning: Collection.insert() is deprecated. Use insertOne, insertMany, or bulkWrite.
{
  acknowledged: true,
  insertedIds: { '0': ObjectId("63ef7f66e253834f3f2a7d1f8") }
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e253834f3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: "arunrajorya@gmail.com"
  }
]
db> db.db.find().pretty()
[
  {
    _id: ObjectId("63ef7f66e253834f3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: "arunrajorya@gmail.com"
  }
]
db> db.db.insert({"name":"naveen","age":24,"mail":"arunrajorya@gmail.com"})
{
  acknowledged: true,
  insertedIds: { '0': ObjectId("63ef8125e25389d334347d1f9") }
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: 'arunrajorya@gmail.com'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'naveen',
    age: 24,
    mail: 'arunrajorya@gmail.com'
  }
]
db> db.db.find({}, _id:0)
Uncaught:
SyntaxError: Unexpected token, expected "," (1:18)

> 1 | db.db.find({}, _id:0)
    |                   ^
  2 |

db> db.db.find({}, _id:0).pretty()
Uncaught:
SyntaxError: Unexpected token, expected "," (1:18)

> 1 | db.db.find({}, _id:0).pretty()
    |                   ^
  2 |

db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: 'arunrajorya@gmail.com'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'naveen',
    age: 24,
    mail: 'arunrajorya@gmail.com'
  }
]
db> db.db.find().pretty()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: 'arunrajorya@gmail.com'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'naveen',
    age: 24,
    mail: 'arunrajorya@gmail.com'
  }
]
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: 'arunrajorya@gmail.com'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'naveen',
    age: 24,
    mail: 'arunrajorya@gmail.com'
  }
]
db> db.db.find({name:"arun"})
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: 'arunrajorya@gmail.com'
  }
]
db> db.db.find({age:{$lt:24}})
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: 'arunrajorya@gmail.com'
  }
]
db> db.db.find({age:{$gt:22}})
[
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'naveen',
    age: 24,
    mail: 'arunrajorya@gmail.com'
  }
]
db> db.db.find({mail:{$lte:24}})
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: 'arunrajorya@gmail.com'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'naveen',
    age: 24,
    mail: 'arunrajorya@gmail.com'
  }
]
db> db.db.update({mail:"arunrajorya@gmail.com"},{$set:{mail:"test@test.com"}})
DeprecationWarning: Collection.update() is deprecated. Use updateOne, updateMany, or bulkWrite.
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: 'test@test.com'
  },
  {
    _id: ObjectId("63ef8125e25389d3f2a7d1f9"),
    name: 'naveen',
    age: 24,
    mail: 'test@test.com'
  }
]

db> db.db.remove({_id:ObjectId("63ef8125e25389d3f2a7d1f9")})
DeprecationWarning: Collection.remove() is deprecated. Use deleteOne, deleteMany, findOneAndDelete, or bulkWrite.
{ acknowledged: true, deletedCount: 1 }
db> db.db.find()
[
  {
    _id: ObjectId("63ef7f66e25389d3f2a7d1f8"),
    name: 'arun',
    age: 21,
    mail: 'test@test.com'
  }
]
db> db.db.remove({})
{ acknowledged: true, deletedCount: 1 }
db> db.db.find()
